--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
   <nav>
     <a href="#">Inicio</a>
-    <a href="servicios.html">Servicios</a>
+    <a href="servicios_kenin.html">Servicios</a>
   </nav>
 
   <div class="container">
