--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         </div>
         <div class="skill-item" onclick="window.open('#', '_blank')">
           <img src="icons/scada.png" alt="SCADA">
-          <span>Sistemas SCADA</span>
+          <span>Sistemas SCADA casfaga</span>
         </div>
         <div class="skill-item" onclick="window.open('#', '_blank')">
           <img src="icons/cad.png" alt="CAD">
