--- a/index.html
+++ b/index.html
@@ -107,31 +107,31 @@
       <h2>Habilidades y Conocimientos</h2>
       <div class="skills-grid">
         <div class="skill-item" onclick="window.open('#', '_blank')">
-          <img src="icons/plc.png" alt="PLC">
+          <img src="icons/plc.jpg" alt="PLC">
           <span>Programación de PLC<br><small>Siemens, Allen Bradley, Mitsubishi</small></span>
         </div>
         <div class="skill-item" onclick="window.open('#', '_blank')">
-          <img src="icons/scada.png" alt="SCADA">
-          <span>Sistemas SCADA casfaga</span>
+          <img src="icons/scada.jpg" alt="SCADA">
+          <span>Sistemas SCADA</span>
         </div>
         <div class="skill-item" onclick="window.open('#', '_blank')">
-          <img src="icons/cad.png" alt="CAD">
+          <img src="icons/cad.jpg" alt="CAD">
           <span>Diseño CAD<br><small>SolidWorks, Inventor</small></span>
         </div>
         <div class="skill-item" onclick="window.open('#', '_blank')">
-          <img src="icons/pcb.png" alt="PCB">
+          <img src="icons/pcb.jpg" alt="PCB">
           <span>Diseño de PCBs<br><small>Electrónica aplicada</small></span>
         </div>
         <div class="skill-item" onclick="window.open('#', '_blank')">
-          <img src="icons/iot.png" alt="IoT">
+          <img src="icons/iot.jpg" alt="IoT">
           <span>Inteligencia Artificial<br><small>e Internet de las Cosas</small></span>
         </div>
         <div class="skill-item" onclick="window.open('#', '_blank')">
-          <img src="icons/report.png" alt="Reportes">
+          <img src="icons/report.jpg" alt="Reportes">
           <span>Análisis de Fuerzas<br><small>y Reportes Técnicos</small></span>
         </div>
         <div class="skill-item" onclick="window.open('#', '_blank')">
-          <img src="icons/planos.png" alt="Planos">
+          <img src="icons/planos.jpg" alt="Planos">
           <span>Planos Eléctricos<br><small>Domiciliarios e Industriales</small></span>
         </div>
       </div>
