--- a/index.html
+++ b/index.html
@@ -62,14 +62,14 @@
     }
     .skills-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      gap: 1.5rem;
+      grid-template-columns: 1fr;
+      gap: 2rem;
       margin-top: 1.5rem;
     }
     .skill-item {
       text-align: center;
       background-color: #ffffff;
-      padding: 1.5rem;
+      padding: 2rem;
       border-radius: 8px;
       box-shadow: 0 2px 8px rgba(0,0,0,0.05);
       transition: transform 0.3s;
@@ -79,18 +79,23 @@
       transform: translateY(-5px);
     }
     .skill-item img {
-      width: 100px;
-      height: 100px;
+      width: 100%;
+      max-width: 600px;
+      height: auto;
+      aspect-ratio: 3 / 2;
+      object-fit: cover;
       margin-bottom: 1rem;
+      border-radius: 10px;
     }
     .skill-item span {
       display: block;
       font-weight: bold;
+      font-size: 1.4rem;
       color: #1b2a49;
     }
     .volver {
       text-align: center;
-      margin: 3rem 0 2rem;
+      margin-top: 3rem;
     }
     .volver a {
       background-color: #1b2a49;
@@ -99,7 +104,6 @@
       border-radius: 5px;
       text-decoration: none;
       font-weight: bold;
-      transition: background-color 0.3s;
     }
     .volver a:hover {
       background-color: #324c7a;
@@ -153,7 +157,7 @@
       </div>
     </section>
     <div class="volver">
-      <a href="index.html">← Volver al Inicio</a>
+      <a href="#">← Volver arriba</a>
     </div>
   </div>
 </body>
