--- a/servicios_kenin.html
+++ b/servicios_kenin.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Servicios - Kenin Risalbe</title>
+  <title>Kenin Risalbe - Ingeniero Mecatrónico</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
   <style>
     body {
       margin: 0;
@@ -16,44 +17,80 @@
       background-color: #1b2a49;
       color: white;
       padding: 2rem;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
       text-align: center;
+    }
+    header img {
+      border-radius: 50%;
+      width: 150px;
+      height: 150px;
+      object-fit: cover;
+      margin-bottom: 1rem;
     }
     header h1 {
       margin: 0;
+      font-size: 2rem;
+    }
+    header p {
+      margin-top: 0.5rem;
+      font-size: 1rem;
+      color: #cdd4e0;
+    }
+    nav {
+      background-color: #273b61;
+      padding: 1rem;
+      text-align: center;
+    }
+    nav a {
+      color: white;
+      text-decoration: none;
+      margin: 0 1rem;
+      font-weight: bold;
     }
     .container {
-      max-width: 1000px;
+      max-width: 960px;
       margin: 2rem auto;
       padding: 0 1rem;
     }
-    .services-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-      gap: 2rem;
+    .skills {
       margin-top: 2rem;
     }
-    .service-button {
-      background-color: #ffffff;
-      border: 2px solid #1b2a49;
-      border-radius: 10px;
-      padding: 2rem 1rem;
+    .skills h2 {
+      color: #1b2a49;
+    }
+    .skills-grid {
+      display: grid;
+      grid-template-columns: 1fr;
+      gap: 2rem;
+      margin-top: 1.5rem;
+    }
+    .skill-item {
       text-align: center;
+      background-color: #ffffff;
+      padding: 2rem;
+      border-radius: 8px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+      transition: transform 0.3s;
       cursor: pointer;
-      transition: transform 0.3s, background-color 0.3s;
     }
-    .service-button:hover {
+    .skill-item:hover {
       transform: translateY(-5px);
-      background-color: #e6ecf4;
     }
-    .service-button img {
-      width: 100px;
-      height: 100px;
+    .skill-item img {
+      width: 100%;
+      max-width: 600px;
+      height: auto;
+      aspect-ratio: 3 / 2;
+      object-fit: cover;
       margin-bottom: 1rem;
+      border-radius: 10px;
     }
-    .service-button span {
+    .skill-item span {
       display: block;
-      font-size: 1.1rem;
       font-weight: bold;
+      font-size: 1.4rem;
       color: #1b2a49;
     }
     .volver {
@@ -75,29 +112,53 @@
 </head>
 <body>
   <header>
-    <h1>Servicios Profesionales</h1>
+    <img src="Foto_perfil.JPG" alt="Foto de Kenin">
+    <h1>Kenin Jorge Risalbe Melgar</h1>
+    <p>Ingeniero Mecatrónico | Especialista en Automatización, Electrónica y Diseño CAD</p>
   </header>
 
-  <div class="container">
-    <div class="services-grid">
-      <div class="service-button" onclick="window.open('#', '_blank')">
-        <img src="icons/domotica.jpg" alt="Domótica">
-        <span>Domotizar tu casa</span>
-      </div>
-      <div class="service-button" onclick="window.open('#', '_blank')">
-        <img src="icons/instalaciones.jpg" alt="Instalaciones">
-        <span>Instalaciones eléctricas<br>y planos domiciliarios</span>
-      </div>
-      <div class="service-button" onclick="window.open('#', '_blank')">
-        <img src="icons/variador.jpg" alt="Variadores">
-        <span>Programación de variadores</span>
-      </div>
-    </div>
+  <nav>
+    <a href="index.html">← Volver al Inicio</a>
+    <a href="servicios_kenin.html">Servicios</a>
+  </nav>
 
+  <div class="container">
+    <section class="skills">
+      <h2>Habilidades y Conocimientos</h2>
+      <div class="skills-grid">
+        <div class="skill-item" onclick="window.open('#', '_blank')">
+          <img src="icons/plc.jpg" alt="PLC">
+          <span>Programación de PLC<br><small>Siemens, Allen Bradley, Mitsubishi</small></span>
+        </div>
+        <div class="skill-item" onclick="window.open('#', '_blank')">
+          <img src="icons/scada.jpg" alt="SCADA">
+          <span>Sistemas SCADA</span>
+        </div>
+        <div class="skill-item" onclick="window.open('#', '_blank')">
+          <img src="icons/cad.jpg" alt="CAD">
+          <span>Diseño CAD<br><small>SolidWorks, Inventor</small></span>
+        </div>
+        <div class="skill-item" onclick="window.open('#', '_blank')">
+          <img src="icons/pcb.jpg" alt="PCB">
+          <span>Diseño de PCBs<br><small>Electrónica aplicada</small></span>
+        </div>
+        <div class="skill-item" onclick="window.open('#', '_blank')">
+          <img src="icons/iot.jpg" alt="IoT">
+          <span>Inteligencia Artificial<br><small>e Internet de las Cosas</small></span>
+        </div>
+        <div class="skill-item" onclick="window.open('#', '_blank')">
+          <img src="icons/report.jpg" alt="Reportes">
+          <span>Análisis de Fuerzas<br><small>y Reportes Técnicos</small></span>
+        </div>
+        <div class="skill-item" onclick="window.open('#', '_blank')">
+          <img src="icons/planos.jpg" alt="Planos">
+          <span>Planos Eléctricos<br><small>Domiciliarios e Industriales</small></span>
+        </div>
+      </div>
+    </section>
     <div class="volver">
       <a href="index.html">← Volver al Inicio</a>
     </div>
   </div>
 </body>
 </html>
-
