--- a/index.html
+++ b/index.html
@@ -62,14 +62,14 @@
     }
     .skills-grid {
       display: grid;
-      grid-template-columns: 1fr;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
       gap: 2rem;
       margin-top: 1.5rem;
     }
     .skill-item {
       text-align: center;
       background-color: #ffffff;
-      padding: 2rem;
+      padding: 1.5rem;
       border-radius: 8px;
       box-shadow: 0 2px 8px rgba(0,0,0,0.05);
       transition: transform 0.3s;
@@ -80,9 +80,8 @@
     }
     .skill-item img {
       width: 100%;
-      max-width: 600px;
       height: auto;
-      aspect-ratio: 3 / 2;
+      aspect-ratio: 4 / 3;
       object-fit: cover;
       margin-bottom: 1rem;
       border-radius: 10px;
@@ -90,7 +89,7 @@
     .skill-item span {
       display: block;
       font-weight: bold;
-      font-size: 1.4rem;
+      font-size: 1.2rem;
       color: #1b2a49;
     }
     .volver {
@@ -118,7 +117,7 @@
   </header>
 
   <nav>
-    <a href="#">Inicio</a>
+    <a href="index.html">← Volver al Inicio</a>
     <a href="servicios_kenin.html">Servicios</a>
   </nav>
 
@@ -157,7 +156,7 @@
       </div>
     </section>
     <div class="volver">
-      <a href="#">← Volver arriba</a>
+      <a href="index.html">← Volver al Inicio</a>
     </div>
   </div>
 </body>
