--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Kenin Risalbe - Ingeniero Mecatrónico</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
-  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
   <style>
     body {
       margin: 0;
@@ -92,11 +91,11 @@
       font-size: 1.2rem;
       color: #1b2a49;
     }
-    .volver {
+    .subir {
       text-align: center;
       margin-top: 3rem;
     }
-    .volver a {
+    .subir a {
       background-color: #1b2a49;
       color: white;
       padding: 0.8rem 1.5rem;
@@ -104,7 +103,7 @@
       text-decoration: none;
       font-weight: bold;
     }
-    .volver a:hover {
+    .subir a:hover {
       background-color: #324c7a;
     }
   </style>
@@ -117,7 +116,6 @@
   </header>
 
   <nav>
-    <a href="index.html">← Volver al Inicio</a>
     <a href="servicios_kenin.html">Servicios</a>
   </nav>
 
@@ -155,8 +153,8 @@
         </div>
       </div>
     </section>
-    <div class="volver">
-      <a href="index.html">← Volver al Inicio</a>
+    <div class="subir">
+      <a href="#top">↑ Volver arriba</a>
     </div>
   </div>
 </body>
