--- a/servicios_kenin.html
+++ b/servicios_kenin.html
@@ -12,27 +12,21 @@
       background-color: #f5f7fa;
       color: #1e1e2f;
     }
-    nav {
-      background-color: #273b61;
-      padding: 1rem;
-      text-align: center;
-    }
-    nav a {
-      color: white;
-      text-decoration: none;
-      margin: 0 1rem;
-      font-weight: bold;
-    }
     .container {
       max-width: 960px;
       margin: 2rem auto;
       padding: 0 1rem;
     }
+    h2.titulo-servicios {
+      text-align: center;
+      color: #1b2a49;
+      font-size: 2rem;
+      margin-bottom: 2rem;
+    }
     .services-grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
       gap: 2rem;
-      margin-top: 1.5rem;
     }
     .service-item {
       text-align: center;
@@ -78,12 +72,8 @@
   </style>
 </head>
 <body>
-  <nav>
-    <a href="index.html">← Volver al Inicio</a>
-  </nav>
-
   <div class="container">
-    <h2 style="text-align: center; color: #1b2a49;">Servicios Profesionales</h2>
+    <h2 class="titulo-servicios">Servicios Profesionales</h2>
     <div class="services-grid">
       <div class="service-item" onclick="window.open('https://tu-enlace-domotica.com', '_blank')">
         <img src="icons/domotica.jpg" alt="Domótica">
@@ -98,9 +88,8 @@
         <span>Programación de variadores</span>
       </div>
     </div>
-
     <div class="volver">
-      <a href="index.html">← Volver al Inicio</a>
+      <a href="index.html">← Volver al inicio</a>
     </div>
   </div>
 </body>
