--- a/servicios_kenin.html
+++ b/servicios_kenin.html
@@ -80,7 +80,7 @@
         <span>Domotizar tu casa</span>
       </div>
       <div class="service-item" onclick="window.open('https://tu-enlace-instalaciones.com', '_blank')">
-        <img src="icons/instalaciones.jpg" alt="Instalaciones Eléctricas">
+        <img src="icons/planos.jpg" alt="Instalaciones Eléctricas">
         <span>Instalaciones eléctricas y planos domiciliarios</span>
       </div>
       <div class="service-item" onclick="window.open('https://tu-enlace-variadores.com', '_blank')">
