--- a/servicios_kenin.html
+++ b/servicios_kenin.html
@@ -12,6 +12,16 @@
       background-color: #f5f7fa;
       color: #1e1e2f;
     }
+    header {
+      background-color: #1b2a49;
+      color: white;
+      padding: 2rem;
+      text-align: center;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 2rem;
+    }
     .container {
       max-width: 960px;
       margin: 2rem auto;
@@ -72,15 +82,18 @@
   </style>
 </head>
 <body>
+  <header>
+    <h1>Servicios Profesionales</h1>
+  </header>
+
   <div class="container">
-    <h2 class="titulo-servicios">Servicios Profesionales</h2>
     <div class="services-grid">
       <div class="service-item" onclick="window.open('https://tu-enlace-domotica.com', '_blank')">
         <img src="icons/domotica.jpg" alt="Domótica">
         <span>Domotizar tu casa</span>
       </div>
       <div class="service-item" onclick="window.open('https://tu-enlace-instalaciones.com', '_blank')">
-        <img src="icons/planos.jpg" alt="Instalaciones Eléctricas">
+        <img src="icons/instalaciones.jpg" alt="Instalaciones Eléctricas">
         <span>Instalaciones eléctricas y planos domiciliarios</span>
       </div>
       <div class="service-item" onclick="window.open('https://tu-enlace-variadores.com', '_blank')">
@@ -94,4 +107,3 @@
   </div>
 </body>
 </html>
-
